# OBS-SPORT-EYES

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_DIRECTOR_AI_GUI_FIX.txt  README_STARTUP_TRACKING_FIX.txt  README_v1.10.0d_CSV_Logging.md  README_v1.10.0f_True_Async_Inference.md  README_v1.10.0g_Tracking_Helper_Deduplication.md  README_v1.10.0h_OBS_API_Compatibility_Fix.md  README_v1.10.0j_Tracking_Enum_Callback_Fix.md  README_v1.10.0k_Async_Telemetry_and_Director_States.md  README_v1.10.0m_Configuration_Profiles.md  README_v1.10.0n_Profile_JSON_OBS_API_Compatibility.md  buildspec.json
.github/patches/: v1.10.0o-group-edge-zoom-min.patch
.github/workflows/: apply-director-ai-wiring.yml  apply-v1.10.0o.yml  auto-apply-director-ai-logger-build.yml  auto-apply-director-ai-wiring.yml  director-ai-alpha-build.yml
cmake/: FetchOnnxruntime.cmake
cmake/common/: buildnumber.cmake
data/locale/: en-US.ini
docs/: README_v1.10.0l_Async_Cache_Correctness_Fix.md  README_v1.10.0m_Configuration_Profiles.md  README_v1.10.0o_Group_Edge_Zoom_Min.md  architecture-refactor-1.10.0.md  director_ai_alpha.md  director_ai_detect_filter_wiring.md  migration-obs-sport-eyes-1.10.0.md  train_model.md
profiles/: PanaCast_180_4K_5m_6m_Sideline.json
scripts/: apply_director_ai_gui.py  apply_director_ai_logger_build.py  apply_director_ai_wiring.py
src/: FilterData.h  comandi Make.txt  consts.h  detect-filter-info.c  detect-filter-utils.cpp  detect-filter-utils.h  detect-filter.cpp  plugin-main.c  sport-eyes-filter-internal.h
src/config/: SportEyesProfileManager.cpp  SportEyesProfileManager.h
src/diagnostics/: SportEyesCsvLogger.cpp
src/director_ai/: CameraPlanner.cpp  CameraPlanner.h  CourtModel.cpp  CourtModel.h  DirectorAIEngine.cpp  DirectorAIEngine.h  DirectorAIIntegration.cpp  DirectorAIIntegration.h  DirectorAILogger.cpp  DirectorAILogger.h  TemporalDirector.cpp  TemporalDirector.h  WorldState.cpp  WorldState.h
src/edgeyolo/: core.hpp  edgeyolo_openvino.cpp  edgeyolo_openvino.hpp  edgeyolo_postprocess.hpp
src/filter/: SportEyesFilterLifecycle.cpp  SportEyesFilterProperties.cpp
src/models/: IDetectorModel.h  OpenVINOAdapters.h  YuNetOpenVINO.patched.cpp  YuNet_OpenVINO.cpp  YuNet_OpenVINO.hpp  edgeyolo_openvino.cpp  edgeyolo_openvino.hpp
src/ort-model/: types.hpp
src/pipeline/: SportEyesAsyncInference.cpp  SportEyesVideoTick.cpp
src/render/: SportEyesFilterRender.cpp
src/sport/: GroupClustering.cpp
src/yunet/: YuNetOpenVINO.cpp  YuNetOpenVINO.h
